--- a/index.html
+++ b/index.html
@@ -27,5 +27,39 @@
           </div>
         </div>
       </section>
+      <!--End section-->
+      <nav class="mynav navbar navbar-inverse">
+        <div class="container">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only"> Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#"><img src="image/logo.png" alt="favicon" class="logo"></a>
+            <div class="navbar-collapse collapse">
+              <ul class="nav navbar-nav navbar-right">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <!-- dropdown menu-->
+                <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                <li class="dropdown-header">Frozen Foods</li>
+                <li class="divider"></li>
+                <li><a href="#">Chicken</li>
+                <li><a href="#">Turkey</li>
+                <li><a href="#">Meat</li>
+                <li class="dropdown-header">Sea Foods</li>
+                <li class="divider"></li>
+                <li><a href="#">Fish</li>
+                <li><a href="#">Crap</li>
+              </ul>
+              <li><a href="#">Contact</a></li>
+              </li>
+              </ul>
+              </div>
+        </div>
+      </nav>
 </body>
 </html>
