add a new bootstrap nav bar layout to my index.html

--- a/index.html
+++ b/index.html
@@ -9,56 +9,39 @@
     <title>CONSTRUCTION</title>
 </head>
 <body>
-    <!-- header section-->
-  <section style="background-color: orange; border-bottom: 5px solid blue;">
-    <div class="container">
-      <ul class="nav navbar-nav">
-        <li><a href="#"><i class="fa fa-phone"></i>+(234)09069946685</li></a>
-          <li><a href="#"><i class="fa fa-envelope-o"></i>olamilekanomosanya@gmail.com</li></a>
-            <li><a href="#"><i class="fa fa-clock-o"></i>Mon-Fri 08:00am - 6:00pm</li></a>
-         </ul>
-         <ul class="nav navbar-nav navbar-right social_nav">
-            <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
-          </ul>
-          </div>
-        </div>
-      </section>
-      <!--End section-->
-      <nav class="mynav navbar navbar-inverse">
-        <div class="container">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only"> Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#"><img src="image/logo.png" alt="favicon" class="logo"></a>
-            <div class="navbar-collapse collapse">
-              <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <!-- dropdown menu-->
-                <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                <li class="dropdown-header">Frozen Foods</li>
-                <li class="divider"></li>
-                <li><a href="#">Chicken</li>
-                <li><a href="#">Turkey</li>
-                <li><a href="#">Meat</li>
-                <li class="dropdown-header">Sea Foods</li>
-                <li class="divider"></li>
-                <li><a href="#">Fish</li>
-                <li><a href="#">Crap</li>
-              </ul>
-              <li><a href="#">Contact</a></li>
-              </li>
-              </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dropdown
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Something else here</a>
               </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#">Disabled</a>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
         </div>
       </nav>
 </body>
