fix the navbar error

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>CONSTRUCTION</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <section class="nav_head">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-warning">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -44,5 +45,7 @@
           </form>
         </div>
       </nav>
+    </section>
+      
 </body>
 </html>
